0.7.2:

2008-07-23  Siavash Safi  <siavash.safi@gmail.com>

	* clutter/cluttermm.pc.in: Added pangomm

0.7.1:

2008-07-14  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am:
	* clutter-cairo/
	* clutter/cluttermm.pc.in:
	* clutter/cluttermm/init.cc:
	* clutter/src/stage.hg:
	* clutter/src/texture.hg:
	* configure.in:
	* examples/Makefile.am:
	* examples/Makefile.am_fragment:
	* examples/flowers.cc:
	* tools/extra_defs_gen/Makefile.am:
	* tools/extra_defs_gen/generate_defs_clutter.cc:
	* tools/extra_defs_gen/generate_defs_clutter_cairo.cc:
	Moved clutter-cairomm into a separate module, though we 
	still depend on cairomm because we depend on pangomm (which depends on 
	cairomm to wrap pango-cairo sensibly). 

2008-07-14  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am:
	* clutter-gtk/
	* configure.in:
	* examples/Makefile.am:
	* examples/Makefile.am_fragment:
	* examples/embed-gtk.cc: Moved clutter-gtkmm into a separate module, 
	because someone did not want to use gtkmm.
	clutter-cairomm is still there, but maybe we should remove that too.

	Ths does not actually build yet because clutter-cairo-0.8 does not exist yet.

2008-07-05  Armin Burgmeier  <armin@openismus.com>

	* configure.in: Post-release version bump to 0.7.1.

0.7.0:

2008-07-05  Armin Burgmeier  <armin@openismus.com>

	* clutter/cluttermm/init.h:
	* clutter/cluttermm/init.cc: Commented out the init() overload that
	takes a Glib::OptionContext& since for this to work we need a clutter
	release with clutter bug #1033 fixed.

	* clutter/examples/test-actors.cc: Use the normal init() for now,
	don't accepting the -n command line argument.

2008-07-05  Armin Burgmeier  <armin@openismus.com>

	* clutter/cluttermm/event.h:
	* clutter/cluttermm/event.cc: Wrapped some of the clutter_event_*
	functions. Don't wrap those taking a raw ClutterEvent* for now since
	"derived" events such as ClutterEventKey would need an ugly
	reinterpret_cast<> to use those functions anyway. We should probably